# SimbaServerless

./: .gitignore  .vercelignore  README.md  Vercel.json  char_skins.py  commands.py  components.py  ev.py  main.py  modals.py  pyproject.toml  requirements.txt  test.py  upsert.py  vercel.json
.github/workflows/: hi.yml  main.yml  rec.yml
_commands/: __init__.py  check_player_stats.py  check_survival_scores.py  clan_player_status.py  collect_bounty.py  credits.py  deploy.py  get_clan_rank.py  get_clan_ranking.py  get_crosshair.py  lobby_links.py  peek_skins.py  send_credits.py  super_deploy.py  verify.py
core/: __init__.py  command_handler.py  component_handler.py
recruit/: __init__.py  recruit.py
utils/: constants.py  verify.py
