[project]
name = "simbaserverless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "discord>=2.3.2",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pynacl>=1.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
